Fix T45891: Crash generating previews