source/blender/blenkernel/intern/group.c
@@ -156,6 +156,7 @@ Group *BKE_group_copy(Group *group)
 	BLI_duplicatelist(&groupn->gobject, &group->gobject);
 
 	/* Do not copy group's preview (same behavior as for objects). */
+	groupn->preview = NULL;
 
 	if (group->id.lib) {
 		BKE_id_lib_local_paths(G.main, group->id.lib, &groupn->id);
